--- a/stylesheets/episode.css
+++ b/stylesheets/episode.css
@@ -36,7 +36,7 @@
     border: none;
     background: url(../images/bg_btn_middle.png) repeat 0 0;
     color: #777;
-    font-family: Helvetica;
+    font-family: Arial, Helvetica;
     font-weight: 500;
     font-size: 15px;
     line-height: 22px;
