--- a/stylesheets/lightbox.css
+++ b/stylesheets/lightbox.css
@@ -333,7 +333,7 @@
     border: none;
     background: url(../images/popup_input_box_middle.png) repeat-x;
     color: #777;
-    font-family: Helvetica;
+    font-family: Arial, Helvetica;
     font-size: 13px;
 }
 
