--- a/stylesheets/ep-curation.css
+++ b/stylesheets/ep-curation.css
@@ -83,7 +83,7 @@ p.auto-height {
     height: 26px;
     background: url(../images/bg_tab_middle_off.png) repeat-x;
     color: #777;
-    font-family: Helvetica;
+    font-family: Arial, Helvetica;
     font-size: 15px;
     line-height: 26px;
     text-decoration: none;
@@ -286,7 +286,7 @@ padding-right: 8px;
     border: none;
     background: url(../images/input_box_middle_vertical.png) repeat-y;
     color: #999;
-    font-family: Helvetica;
+    font-family: Arial, Helvetica;
     font-size: 13px;
 	resize: none;
 }
@@ -422,7 +422,7 @@ padding-right: 8px;
     border: none;
     background: url(../images/bg_calander_highlight.png) no-repeat 0 0;
     color: #fff;
-    font-family: Helvetica;
+    font-family: Arial, Helvetica;
 	font-weight: bold;
     font-size: 13px;
     line-height: 21px;
@@ -462,7 +462,7 @@ padding-right: 8px;
     padding: 6px 10px 0 10px;
     font-weight: normal;
     font-size: 13px;
-    font-family: Helvetica;
+    font-family: Arial, Helvetica;
 }
 
 #epcurate-curation #cur-edit .set-time .btn-wrap .btn-cancel {
@@ -560,7 +560,7 @@ padding-right: 8px;
     border: none;
     background-color: transparent;
     color: #999;
-    font-family: Helvetica;
+    font-family: Arial, Helvetica;
     font-size: 13px;
 	resize: none;
 }
@@ -997,7 +997,7 @@ padding-right: 8px;
 #epcurate-curation #cur-edit .background-container .bg-img p.notice {
 	clear: both;
 	font-weight: normal;
-	font-family: Helvetica;
+	font-family: Arial, Helvetica;
 	font-size: 13px;
 	line-height: 18px;
 }
@@ -1035,7 +1035,7 @@ padding-right: 8px;
 	padding: 0;
 	color: #777;
 	font-weight: normal;
-	font-family: Helvetica;
+	font-family: Arial, Helvetica;
 	font-size: 13px;
 	line-height: 28px;
 }
@@ -1558,7 +1558,7 @@ padding-right: 8px;
     padding-left: 3px;
     background: url(../images/bubble_left.png) no-repeat 0 0;
     color: #fff;
-    font-family: Helvetica;
+    font-family: Arial, Helvetica;
     font-size: 13px;
 }
 
