--- a/stylesheets/episode.css
+++ b/stylesheets/episode.css
@@ -9,8 +9,28 @@
 }
 
 #title-func h2 {
+    position: relative;
+    overflow: hidden;
+}
+
+#title-func h2,
+#channel-name {
+    display: block;
     height: 27px;
     line-height: 27px;
+}
+
+#title-func h2 .title-crumb {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 322px;
+    height: 27px;
+}
+
+.zh #title-func h2 .title-crumb {
+    width: 236px;
 }
 
 #title-func h2 .curate {
@@ -35,7 +55,7 @@
     padding: 3px 10px 0 10px;
     border: none;
     background: url(../images/bg_btn_middle.png) repeat 0 0;
-    color: #777;
+    color: #555;
     font-family: Arial, Helvetica;
     font-weight: 500;
     font-size: 15px;
@@ -54,7 +74,7 @@
 
 #title-func h2 .curate:hover .btn-middle {
     background: url(../images/bg_btn_middle_press.png) repeat 0 0;
-    color: #999;
+    color: #777;
 }
 
 /**
@@ -96,6 +116,8 @@
 #ep-time-list h3,
 #ep-no               h3 {
     margin-bottom: 10px;
+    font-weight: bold;
+    font-size: 25px;
     text-align: center;
 }
 
@@ -291,7 +313,7 @@
     width: 180px;
     height: 28px;
     padding-top: 2px;
-    color: #777;
+    color: #555;
     font-size: 13px;
     text-align: center;
     text-decoration: none;
@@ -475,12 +497,12 @@
 }
 
 #ep-list ul li .episode h3 a {
-	color: #777;
+	color: #555;
 	text-decoration: none;
 }
 
 #ep-list ul li .episode h3 a:hover {
-	color: #999;
+	color: #777;
 }
 
 #ep-list ul li .episode .btns {
@@ -512,7 +534,7 @@
     float: left;
     height: 25px;
     margin: 3px 0 0;
-    color: #777;
+    color: #555;
     font-size: 13px;
     line-height: 28px;
     text-decoration: none;
@@ -520,7 +542,7 @@
 
 #ep-list ul li .episode .btns .btn-wrap ul li a.disable,
 #ep-list ul li .episode .btns .btn-wrap ul li a:hover {
-    color: #999;
+    color: #777;
 }
 
 #ep-list ul li .episode .btns .btn-wrap ul li a.edit span,
@@ -568,7 +590,7 @@
 #ep-list ul li .views {
     float: left;
     width: 155px;
-    color: #777;
+    color: #555;
     font: 13px Arial, Helvetica;
 }
 
@@ -584,13 +606,13 @@
 }
 
 #ep-list ul li .curator p a {
-    color: #777;
+    color: #555;
 	font-weight: bold;
     text-decoration: none;
 }
 
 #ep-list ul li .curator p a:hover {
-	color: #999;
+	color: #777;
 }
 
 #ep-list ul li p.drag {
