--- a/stylesheets/lightbox.css
+++ b/stylesheets/lightbox.css
@@ -3,6 +3,10 @@
     +content-main
         =lightbox-create-channel
         =lightbox-facebook
+        =lightbox-upload-video
+        =lightbox-play-video
+        =overlay-l
+        =draft-notice, =invalid-notice
 -----------------------------------------------------------------------------*/
 
 .blockOverlay {
@@ -32,7 +36,9 @@
 
 #lightbox-create-channel {
     display: none;
-    margin: -171px 0 0 -321px;
+    width: 644px;
+    height: 342px;
+    margin: -171px 0 0 -322px;
     text-align: center;
 }
 
@@ -79,7 +85,9 @@
 #lightbox-create-channel p.create span {
     position: absolute;
     top: 100px;
-    left: 28px;
+    left: 50%;
+    width: 120px;
+    margin-left: -60px;
     color: #fff;
     font-weight: bold;
     font-size: 20px;
@@ -154,7 +162,7 @@
 #lightbox-facebook .content p {
     overflow: hidden;
     margin-bottom: 15px;
-	color: #777;
+	color: #555;
 }
 
 #lightbox-facebook .content p.confirm span {
@@ -169,7 +177,7 @@
     display: block;
     width: 14px;
     height: 15px;
-	color: #777;
+	color: #555;
     text-indent: -100000px;
 }
 
@@ -256,7 +264,7 @@
 
 .lightbox-upload-video .upload-audio .upload-audio-wrap p.required {
     margin-bottom: 10px;
-    color: #777;
+    color: #555;
     font-size: 13px;
     text-align: right;
 }
@@ -278,7 +286,7 @@
     height: 26px;
     margin-right: 10px;
     padding: 0 0 0 10px;
-    color: #777;
+    color: #555;
     font-weight: bold;
     font-size: 13px;
     line-height: 26px;
@@ -292,7 +300,7 @@
 .lightbox-upload-video .upload-audio .upload-audio-wrap form .fminput .fmfield {
     position: relative;
     overflow: auto;
-    color: #999;
+    color: #777;
     font-size: 13px;
 }
 
@@ -332,7 +340,7 @@
     padding-left: 2px;
     border: none;
     background: url(../images/popup_input_box_middle.png) repeat-x;
-    color: #777;
+    color: #555;
     font-family: Arial, Helvetica;
     font-size: 13px;
 }
@@ -370,7 +378,7 @@
     height: 19px;
     padding-left: 25px;
     background: url(../images/btn_radio_off.png) no-repeat 0 0;
-    color: #777;
+    color: #555;
     line-height: 18px;
     text-decoration: none;
 }
@@ -460,204 +468,7 @@
 	width: 707px;
 	height: 398px;
 }
-/*
-#lightbox-play-video .video-wrap #video-control,
-#lightbox-play-audio .video-wrap #video-control {
-	clear: both;
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-    height: 44px;
-    background-color: #000;
-}
 
-#progress-bar {
-    position: absolute;
-    top: 8px;
-    left: 0;
-    width: 100%;
-    height: 8px;
-    background: #2d3135;
-}
-
-#loaded {
-    width: 50%;
-    height: 8px;
-    background: #666;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 31;
-}
-
-#played {
-    width: 30%;
-    height:8px;
-    background: #aeaeae;
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: 32;
-}
-
-#play-dragger {
-    width: 18px;
-    height: 18px;
-    background: url(../images/btn_knob.png) 0 0 no-repeat;
-    position: absolute;
-    top: 3px;
-    left: 0;
-    z-index: 35;
-    cursor: pointer;
-}
-
-#video-control ul {
-    overflow: hidden;
-    height: 25px;
-    padding-top: 16px;
-}
-
-#video-control ul li {
-    float: left;
-}
-
-#btn-prev {
-    width: 34px;
-    height: 25px;
-    background: #000 url(../images/btn_controls.png) no-repeat 0 -298px;
-    cursor: pointer;
-}
-
-#btn-prev:hover,
-#btn-prev.on {
-    background-position: 0 -348px;
-}
-
-#btn-play {
-    width: 57px;
-    height: 25px;
-    background: #000 url(../images/btn_controls.png) 0 2px no-repeat;
-    cursor: pointer;
-}
-
-#btn-play:hover, #btn-play.on {
-    background-position: 0 -48px;
-}
-
-#btn-pause {
-    width: 57px;
-    height: 25px;
-    background: #000 url(../images/btn_controls.png) 0 -98px no-repeat;
-    cursor: pointer;
-}
-
-#btn-pause:hover,
-#btn-pause.on {
-    background-position: 0 -148px;
-}
-
-#btn-next {
-    width: 34px;
-    height: 25px;
-    background: #000 url(../images/btn_controls.png) no-repeat 0 -198px;
-    cursor: pointer;
-}
-
-#btn-next:hover,
-#btn-next.on {
-    background-position: 0 -248px;
-}
-
-#volume-control {
-    width: 101px;
-    height: 25px;
-    background: #000 url(../images/btn_controls.png) no-repeat 0 -398px;
-    position: relative;
-}
-
-#volume-bar {
-    width: 53px;
-    height: 5px;
-    background: url(../images/bg_volumebar.png) 0 3px no-repeat;
-    position: absolute;
-    top: 10px;
-    right: 10px; 
-}
-
-#volume-dragger {
-    width: 6px;
-    height: 16px;
-    background: url(../images/btn_dragger.png) 0 0 no-repeat;
-    position: absolute;
-    top: 7px;
-    left: 67px;
-    z-index: 35;  
-    cursor: pointer;
-}
-
-#play-time {
-    width: 446px;
-    height: 25px;
-    margin-right: 1px;
-    padding: 3px 5px 0 0;
-    background: #000 url(../images/bg_controlbar.png) 0 bottom repeat-x;
-    font-size: 13px;
-    line-height: 25px;
-    text-align: right;
-}
-
-#played-length {
-    color: #fff;
-}
-
-#play-time .divider {
-    padding: 0 2px;
-}
-
-#btn-volume {
-    width: 20px;
-    height: 13px;
-    background: url(../images/btn_controls.png) 0 -700px;
-    position: absolute;
-    top: 7px;
-    left: 8px;
-    cursor: pointer;
-}
-
-#btn-volume.quiet {
-    background-position: 0 -750px;
-}
-
-#btn-volume.loud {
-    background-position: 0 -800px;
-}
-
-#btn-volume.mute {
-    background-position: 0 -850px;
-}
-
-#btn-expand {
-    width: 27px;
-    height: 25px;
-    background: #000 url(../images/btn_controls.png) 0 -498px no-repeat;
-    cursor: pointer;
-}
-
-#btn-expand:hover, #btn-expand.on {
-    background-position: 0 -548px;
-}
-
-#lightbox-play-video .btns,
-#lightbox-play-audio .btns {
-    width: 240px;
-    margin: 20px auto 0;
-}
-
-#lightbox-play-video .btns a,
-#lightbox-play-audio .btns a {
-    width: 237px;
-}
-*/
 /**
 *
 * =overlay-l
@@ -670,6 +481,11 @@
 	margin: -86px 0 0 -127px;
 	padding-left: 10px;
 	background: url(../images/bg_popup_box_s_left.png) no-repeat 0 0;
+}
+
+.zh .overlay-l {
+	width: 266px;
+    margin: -86px 0 0 -133px;
 }
 
 .overlay-l .overlay-container {
@@ -702,10 +518,14 @@
 
 .overlay-l .overlay-container .overlay-wrap p.content {
 	padding: 0 8px;
-	color: #777;
+	color: #555;
 	font-weight: normal;
 	font-size: 13px;
 	text-align: left;
+}
+
+.zh .overlay-l .overlay-container .overlay-wrap p.content {
+    text-align: center;
 }
 
 .overlay-l .overlay-container .overlay-wrap .overlay-btn {
@@ -728,11 +548,12 @@
 
 /**
 *
-* =draft-notice
+* =draft-notice, =invalid-notice
 *
 **/
 
-#draft-notice {
+#draft-notice,
+#invalid-notice {
     width: 417px;
     margin-left: -214px;
 }
@@ -744,8 +565,15 @@
 
 #draft-notice h4 {
     margin-bottom: 16px;
-    color: #777;
+    color: #555;
     font: bold 13px Arial, Helvetica;
+}
+
+#invalid-notice h4 {
+    margin-top: 22px;
+    color: #555;
+    font: bold 13px Arial, Helvetica;
+    text-align: center;
 }
 
 #draft-notice p.content {
