--- a/stylesheets/epcurate.css
+++ b/stylesheets/epcurate.css
@@ -111,7 +111,12 @@
 #content-wrap form .fminput .fmfield p.radio-list label {
     width: auto;
     margin: 4px 36px 0 0;
+    padding: 0;
     font-weight: normal;
+}
+
+#content-wrap form .fminput .fmfield p.radio-list.draft label {
+    margin-right: 0;
 }
 
 #content-wrap form .fminput .fmfield p.radio-list label.last {
@@ -134,16 +139,68 @@
 
 #content-wrap form .fminput .fmfield p.radio-list span.box-middle {
     display: block;
+    position: relative;
+    width: auto;
     height: 27px;
-    padding-right: 6px;
+    padding: 0 6px;
     background: url(../images/popup_input_box_middle_s.png) repeat-x;
 }
 
 #content-wrap form .fminput .fmfield p.radio-list.draft span.box-left,
 #content-wrap form .fminput .fmfield p.radio-list.draft span.box-right,
 #content-wrap form .fminput .fmfield p.radio-list.draft span.box-middle {
-    padding: 0;
+    width: 335px;
+    padding: 0 0 0 3px;
     background: none;
+}
+
+#content-wrap form .fminput .fmfield p.radio-list.draft span.last {
+    float: right;
+}
+
+#content-wrap form .fminput .fmfield p.radio-list.draft span.glow-left {
+    position: absolute;
+    top: -20px;
+    left: 0;
+    z-index: 10000;
+    float: left;
+    height: 66px;
+    padding-left: 23px;
+    background: url(../images/bg_radio_light_left.png) no-repeat 0 0;
+}
+
+#content-wrap form .fminput .fmfield p.radio-list.draft span.glow-right {
+    display: block;
+    height: 66px;
+    padding-right: 23px;
+    background: url(../images/bg_radio_light_right.png) no-repeat right 0;
+}
+
+#content-wrap form .fminput .fmfield p.radio-list.draft span.glow-middle {
+    display: block;
+    width: 110px;
+    height: 24px;
+    line-height: 24px;
+    padding: 21px 0 21px 6px;
+    background: url(../images/bg_radio_light_middle.png) repeat-x;
+}
+
+.zh #content-wrap form .fminput .fmfield p.radio-list.draft span.box-middle {
+    width: 232px;
+}
+
+.zh #content-wrap form .fminput .fmfield p.radio-list.draft span.glow-middle {
+    width: 85px;
+}
+
+#content-wrap form .fminput .fmfield p.radio-list.draft span.glow-middle label {
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+}
+
+#content-wrap form .fminput .fmfield p.radio-list.draft span.glow-middle label .radio {
+    padding-top: 3px;
 }
 
 #content-wrap form .fminput .fmfield p.radio-list .checker {
@@ -208,13 +265,18 @@
 }
 
 #content-wrap form .fminput .fmfield p.radio-list a .tip .tip-middle {
-    width: auto;
+    width: 247px;
     height: 57px;
     padding: 3px 5px 0;
     background: url(../images/bg_bubble_middle_m.png) repeat-x;
     color: #555;
     font: 13px/17px Arial, Helvetica;
     text-align: justify;
+}
+
+.zh #content-wrap form .fminput .fmfield p.radio-list a .tip .tip-middle,
+#content-wrap form .fminput .fmfield p.radio-list.draft a .tip .tip-middle {
+    width: auto;
     white-space: nowrap;
 }
 
@@ -705,6 +767,12 @@
     padding: 0 0 0;
     background: url(../images/bg_divider.png) repeat-x 0 top;
     text-align: center;
+}
+
+#content-wrap form .form-btn .btn-wrap {
+    height: 46px;
+    margin-top: 2px;
+    background: url(../images/bg_main.png) repeat -2% 0;
 }
 
 #content-wrap form .form-btn .wrap {
