--- a/stylesheets/lightbox.css
+++ b/stylesheets/lightbox.css
@@ -16,9 +16,11 @@
 }
 
 .blockMsg {
-    top: 50% !important;
-    left: 50% !important;
-    width: auto !important;
+    position: relative !important;
+    top: 0 !important;
+    left: 0 !important;
+    width: 100% !important;
+    height: 100% !important;
     border: none !important;
     background: transparent !important;
     cursor: default !important;
@@ -36,6 +38,9 @@
 
 #lightbox-create-channel {
     display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
     width: 644px;
     height: 342px;
     margin: -171px 0 0 -322px;
@@ -119,8 +124,10 @@
 **/
 
 #lightbox-facebook {
-    position: relative;
     display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
     margin: -108px 0 0 -213px;
     text-align: left;
     cursor: default;
@@ -476,6 +483,9 @@
 **/
 
 .overlay-l {
+    position: fixed;
+    top: 50%;
+    left: 50%;
 	width: 253px;
 	height: 172px;
 	margin: -86px 0 0 -127px;
